--- a/Anubis/doc/man/man1/anubis.1
+++ b/Anubis/doc/man/man1/anubis.1
@@ -4,7 +4,7 @@
 .TH "ANUBIS" "1" "June 2016" "" ""
 .
 .SH "Name"
-Anubis \- A powerful packet generator\.
+Anubis \- Anubis is a powerful packet generator. Support any layer socket from TCP/IP layers. Different from other packet generator, you can replace most parameter with reserved word. All packet configuration is using JSON format file\.
 .
 .SH "Example"
 See \fIhttps://github\.com/QbsuranAlang/Anubis\fR
